--- a/index-1.css
+++ b/index-1.css
@@ -306,6 +306,10 @@ a{
     margin-top: 15px;
 }
 
+.cat img{
+    width: 100vw
+}
+
 .footer {
   display: flex;
   justify-content: space-between;
@@ -314,7 +318,6 @@ a{
 
 .footer-left {
   display: flex;
-  flex-wrap: wrap;
   gap: 60px;
   padding: 60px;
   width: 1000%;
@@ -349,11 +352,12 @@ a{
 }
 
 .social-icons img {
-  width: 25px;
+  width: 30px;
+  height: 30px;
   margin-right: 12px;
   border: 1px solid #e6cfcf;
   border-radius: 50%;
-  padding: 5px;
+  padding: 2px;
 }
 
 
