--- a/CSS-Assets/index-3.css
+++ b/CSS-Assets/index-3.css
@@ -90,3 +90,33 @@ a{
     font-size: 30px;
     color: #A03C6B;
 }
+.first_page img{
+    width: 100vw;
+    border-bottom: 1px solid black;
+    margin-bottom: 15px;
+}
+
+.filters{
+    height: 80px;
+    width: 100vw;
+    background-color: #FFF3F5;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 5px;
+    border-bottom: 0.5px solid black;
+    
+}
+.filters #filter-section{
+    height: 33px;
+    width: 150px;
+    font-size: 14px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 4px;
+}
+.filters #filter-section:hover{
+    background-color: #ffd5e1;
+}
+
+
